--- a/templates/index.html
+++ b/templates/index.html
@@ -29,6 +29,13 @@
     <header>
         <h1>Welcome to Django ML Deployment Application</h1>
     </header>
+    <hr>    
+    <form action = "user"> <!-- Triggering POST Request for Submit --> 
+            Enter your name: <input type = "text" name = "username"><br>
+            <input type = "submit">
+        </form>
+    </body>
+    </form>
    
 </body>
 </html>
